--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,5 +2,5 @@ Package: controltheory
 Version: 0-0
 Date: 2014-04-24
 Maintainer: Adam Vogt <vogt.adam@gmail.com>
-Depends: deSolve, polynom, RANN, plyr, reshape2
+Depends: deSolve, polynom, RANN, plyr, reshape2, methods
 License: GPL (>= 2)
